--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,5 @@
 .ablock {
   display: block;
-  width: 100%;
   height: 100%;
   text-align: center;
 }
@@ -11,6 +10,28 @@ header {
 nav {
   height: 50px;
   background-color: #333;
+}
+nav .content {
+  width: 1170px;
+  height: 100%;
+  margin: 0 auto;
+}
+nav .content ul {
+  height: 100%;
+  float: left;
+}
+nav .content ul li {
+  height: 100%;
+  float: left;
+}
+nav .content ul li a {
+  display: block;
+  height: 100%;
+  text-align: center;
+  padding: 0 15px;
+  line-height: 50px;
+  font-size: 20px;
+  color: #fff;
 }
 main {
   height: 1000px;
