--- a/css/index.less
+++ b/css/index.less
@@ -6,7 +6,6 @@
 
 .ablock {
     display: block;
-    width: 100%;
     height: 100%;
     text-align: center;
 }
@@ -15,11 +14,34 @@
 header {
     height: 88px;
     background-color: #555;
+
+    
 }
 
 nav {
     height: 50px;
     background-color: #333;
+    .content {
+        .w(1170px);
+
+        ul {
+            height: 100%;
+            float: left;
+
+            li {
+                height: 100%;
+                float: left;
+
+                a {
+                    .ablock;
+                    padding: 0 15px;
+                    line-height: 50px;
+                    font-size: 20px;
+                    color: #fff;
+                }
+            }
+        }
+    }
 }
 main {
     height: 1000px;
